--- a/Calendar/Info.plist
+++ b/Calendar/Info.plist
@@ -13,5 +13,9 @@
 			</array>
 		</dict>
 	</array>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
 </dict>
 </plist>
